logs/Slang/generated/hdlconv/hdlconvertor_p352.sv.log
name: hdlconvertor_p352
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p352.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p352.sv:3:1: error: language feature not yet supported
default clocking cb @(posedge clk);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p352.sv:7:1: error: language feature not yet supported
## 1;
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p352.sv:8:1: error: use of undeclared identifier 'cb'
cb.a <= 1'b0;
^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p352.sv:9:3: error: use of undeclared identifier 'x'
@(x); // x is triggered by reactive stimulus running in same time step
  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p352.sv:10:1: error: use of undeclared identifier 'cb'
cb.a <= 1'b1;
^~
